# UQpy

./: .gitignore  .pre-commit-config.yaml  .pylintrc  azure-pipelines.yml  pyproject.toml  requirements.build.txt
example/Reliability/SubsetSimulation/Example3/: Rosenbrock.py
example/RunModel/Abaqus_Example/: abaqus_input.py  abaqus_output_script.py
src/UQpy/: Reliability.py  SampleMethods.py  Utilities.py
src/UQpy/Distribution/: __init__.py
src/UQpy/Distribution/baseclass/: __init__.py.py
src/UQpy/Distribution/collection/: joint_copula.py  joint_ind.py
src/UQpy/Distribution/copulas/: clayton.py  frank.py  gumbel.py
src/UQpy/SampleMethod/: __init__.py  akmcs.py  is.py  lhs.py  mcs.py  simplex.py
src/UQpy/SampleMethod/baseclass/: __init__.py  mcmc.py  rss.py
src/UQpy/SampleMethod/mcmc/: __init__.py  dram.py  dream.py  mh.py  mmh.py  stretch.py
src/UQpy/SampleMethod/rss/: rectangular.py  voronoi.py
src/UQpy/SampleMethod/strata/: delaunay.py  rectangular.py  voronoi.py
src/UQpy/SampleMethod/sts/: delaunay.py  rectangular.py  voronoi.py
test/PCE/: test_PCE.py
tests/: test_PCE.py
