[tool.poetry]
name = "uqpy"
version = "3.0.0"
description = "Uncertainty Quantification with python"
authors = ["Your Name <you@example.com>"]
license = "MIT Licence"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.4"
scipy = "^1.5.4"
matplotlib = "^3.3.3"
scikit-learn = "fire"

[tool.poetry.dev-dependencies]
pytest-azurepipelines = "^0.8.0"
autopep8 = "^1.5.4"
flake8 = "^3.8.4"
black = "^20.8b1"
pytest = "^6.1.2"
coverage = "^5.3"
pytest-cov = "^2.10.1"
pre-commit = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
