[tool.poetry]
name = "UQpy"
version = "3.0.3"
description = "UQpy (Uncertainty Quantification with python) is a general purpose Python toolbox for modeling uncertainty in physical and mathematical systems."
authors = ["Your Name <you@example.com>"]
license = "MIT license"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.5"
scipy = "^1.6.0"
matplotlib = "^3.3.4"
scikit-learn = "^0.24.1"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest-azurepipelines = "^0.8.0"
autopep8 = "^1.5.4"
flake8 = "^3.8.4"
black = "^20.8b1"
pytest = "^6.2.2"
coverage = "^5.4"
pytest-cov = "^2.11.1"
pre-commit = "^2.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
